2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/z80/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/r3ka/crt0.s,
	  device/lib/r2k/crt0.s,
	  device/lib/gbz80/crt0.s:
	  Fix bug #2153.

2013-12-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (stringToSymbol, createIf): fixed bug 2163
	* support/regression/tests/gcc-torture-execute-string-opt-5.c: enabled for
	  mcs51 with smaller buffer	
	* support/regression/tests/bug-2163.c: new, added

2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/tlcs90/t90regs.s,
	  device/lib/tlcs90/crt0.s:
	  crt0 for tlcs90.

2013-12-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/peep.c:
	  Fix bug #2182.
	* src/SDCCralloc.hpp:
	  Enable warning for non-connected live ranges for hc08 and s08.

2013-12-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c: Fix cost for built-in strncpy().

2013-12-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (glue): fixed bug 2212
	* src/z80/gen.c (genBuiltInStrncpy): fixed bug 2231
	* support/regression/tests/bug-2231.c: new, added

2013-12-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (newiTempOperand): fixed bug 2235
	* support/regression/tests/bug-2235.c: new, added
	* src/SDCCptropt.c (ptrPseudoSymSafe): fixed bug 2216
	* support/regression/tests/bug-2216.c: new, added

2013-12-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version, doc/sdccman.lyx: bumped version to 3.3.2
	* src/SDCCast.c (decorateType, NOT): fixed bug 2232
	* src/SDCCmain.c (printVersionInfo): mention GPL
	* support/regression/tests/bool.c: fixed warning

2013-12-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genIfx): fixed both parts of bug 2233
	* support/regression/tests/bool.c: added test

2013-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc: